@@ -1,4 +1,4 @@
-int versionNumber = 25;
+int versionNumber = 26;
 
 // retain an older version number here if server is compatible
 // with older client versions.
